--- a/ormconfig.json
+++ b/ormconfig.json
@@ -3,7 +3,7 @@
   "password": "docker",
   "name": "default",
   "type": "postgres",
-  "host": "localhost",
+  "host": "database",
   "port": 5432,
   "database": "fin_api",
   "entities": [
