--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules --respawn ./src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "test": "jest"
+    "test": "cross-env NODE_ENV=test jest "
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "docker": "^1.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -18,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.1",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
@@ -32,8 +34,10 @@
     "@types/jest": "^29.2.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/node": "^14.14.35",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.0",
     "babel-jest": "^29.2.1",
+    "cross-env": "^7.0.3",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
